ポートフォリオ経験業務追加

--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,10 @@ body::before {
   margin-right: 10px;
 }
 
+.icon-youtube:before {
+  margin-right: 10px;
+}
+
 .sns{
   text-align: center;
   display: block;
